# logsview

./: .gitignore  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml
docker-images/db/: Dockerfile
docker-images/proxy/: Dockerfile  Dockerfile.Debug  server.Debug.conf  server.conf
docker-images/server/: Dockerfile  Dockerfile.Debug
docker-images/web/: Dockerfile.Debug
scripts/: ApiGenerator.py  bac.py  bp.py  sp.py
server/: .env  Cargo.toml  README.md  build.rs  package.yaml  stack.yaml
server/config/: settings.yml  test-settings.yml
server/migrations/2024-03-28-113348_log/: up.sql
server/schema/: openapi.yaml
server/sql/table/: log.sql
server/src/: Application.hs  Foundation.hs  Settings.hs  main.rs  schema.rs
server/src/Handler/: Comment.hs  Home.hs  Profile.hs
server/src/api/: mod.rs  state.rs
server/src/api/grpc/: mod.rs  server.rs
server/src/api/grpc/logs/: server.rs
server/src/api/grpc/schema/: logs.proto
server/src/api/http/: api_error.rs  mod.rs  server.rs
server/src/api/http/log/: controller.rs  request_types.rs  response_types.rs
server/src/api/http/middleware/: global_error_handler.rs  mod.rs
server/src/api/http/schema/: openapi.rs
server/src/api/http/websocket/: connection.rs  controller.rs  mod.rs  server_iml.rs
server/src/data_layer/: mod.rs
server/src/data_layer/database_connection/: pool.rs
server/src/data_layer/model/: log.rs
server/src/data_layer/model/dto/: log.rs
server/src/data_layer/repositories/: logs.rs
server/src/domain/: logger.rs
web/: .dockerignore  .env  .eslintrc.cjs  .gitignore  README.md  bun.lockb  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/api_generator/: .eslintrc.js  README.md  bun.lockb  generateCode.ts  index.ts  package.json
web/api_generator/templates/: ApiFactory.ts  BaseQueryApi.template  BaseQueryApi.ts  QueryApi.ts
web/api_generator/templates/api/apis/: LogsApi.ts
web/api_generator/templates/api/models/: Loglevel.ts
web/src/: App.vue  main.ts
web/src/Api/: BaseQueryApi.ts  QueryApi.ts  useQueryApi.ts
web/src/Api/api/.openapi-generator/: FILES
web/src/Api/api/apis/: LogsApi.ts
web/src/Api/api/models/: GetLogsByRangeModel.ts  GetLogsByRangeResponse.ts  Log.ts  LogDto.ts  Loglevel.ts  (+1 more)
web/src/assets/: main.scss
web/src/components/: MainHeader.vue
web/src/components/__tests__/: HelloWorld.spec.ts
web/src/layouts/: DefaultLayout.vue
web/src/pages/: Home.vue  Login.vue
web/src/pages/Home/: Home.vue  LogsStore.ts  SettingsStore.ts  utils.ts
web/src/router/: index.ts
(+3 files in other folders)
