[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
actix-web = "4.4.0"
diesel = { version = "2.1.0", features = ["chrono", "serde_json", "uuid"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
deadpool-diesel = { version = "0.5.0", features = ["postgres"] }
deadpool = { version = "0.10.0", features = ["managed"] }
anyhow = "1.0.75"
uuid = { version = "1.7.0", features = [ "v4", "fast-rng", "serde" ] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
serde_json = { version = "1.0.107", features = ["raw_value"] }
serde = { version = "1.0.188", features = ["derive"] }
tonic = "0.11.0"
prost = "0.12.1" 
prost-types = "0.12.1"
utoipa = { version = "4.0.0", features = ["actix_extras", "yaml"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-test = "0.4.3"
derive_more = "0.99.17"

[build-dependencies]
tonic-build = "0.10.2"
